<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2018 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<org.monyhar.chrome.browser.password_manager.PasswordGenerationDialogCustomView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/password_generation_dialog_padding"
    android:paddingEnd="@dimen/password_generation_dialog_padding"
    android:paddingTop="@dimen/password_generation_dialog_padding"
    android:paddingBottom="@dimen/password_generation_dialog_padding"
    android:id="@+id/password_generation_dialog">

    <org.monyhar.ui.widget.TextViewWithLeading
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/generated_password"
        android:textAppearance="@style/TextAppearance.TextLarge.Primary"
        app:leading="20sp"
        android:layout_marginBottom="24dp"/>

    <org.monyhar.ui.widget.TextViewWithLeading
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/generation_save_explanation"
        android:textAppearance="@style/TextAppearance.TextMedium.Secondary"
        app:leading="20sp"/>
</org.monyhar.chrome.browser.password_manager.PasswordGenerationDialogCustomView>