...
        android:paddingStart="?attr/dualControlLayoutHorizontalPadding"
        android:paddingEnd="?attr/dualControlLayoutHorizontalPadding"
        app:stackedMargin="@dimen/button_bar_stacked_margin"
        app:buttonAlignment="end">

        <org.monyhar.ui.widget.ButtonCompat
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarPositiveButtonStyle" />

        <org.monyhar.ui.widget.ButtonCompat
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarNegativeButtonStyle" />

    </org.monyhar.components.browser_ui.widget.DualControlLayout>

...
