<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2020 The Monyhar Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->
<resources>
    <!-- InfoBar constants -->
    <item type="id" name="infobar_icon" />
    <item type="id" name="infobar_close_button" />
    <item type="id" name="infobar_message" />
</resources>
